# internals_libs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  abimap.json  config.mk  error_log.txt  json_specs.abimap.json  json_specs.json  os.c  os.h  os.txt  os_test.c
ISA/: isa.h
os/: os.c  os.h  os.md  require.mk
tests/: os_test.c  x86_64_test.c
x86_64/: require.mk  x86_64.c  x86_64.h
